[package]
name = "dpf-imp"
version = "0.1.0"
authors = ["Ruth-Ann Armstrong <ruthanna@stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#prng = "0.1.1"
#rand = "0.8.3"
rand = "0.5.0"

rand_chacha = "0.3.0"
chacha20 = "0.6.0"

#rand = { git = "https://github.com/rust-lang-nursery/rand" }
#prio = "0.2.0"
openssl = { version = "0.10", features = ["vendored"] }
pem = "0.8"
byteorder = "1"
bytes = "1"
csv = "1.1"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
aes-ctr = "0.4.0"
aes-gcm = "0.6.0"
base64 = "0.12.3"
#rand = "0.7"
ring = "0.16.15"
thiserror = "1.0"
ftp = "*"
prio = "0.2.0"